# webpos-carts/src/main/java/com/example/webpos/carts/model/Item.java
@@ -1,0 +1,39 @@
+package com.example.webpos.carts.model;
+
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import lombok.experimental.Accessors;
+
+@Entity
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@Accessors(fluent = true, chain = true)
+public class Item {
+    @Id
+    @GeneratedValue(strategy = GenerationType.AUTO)
+    private Integer id;
+
+    @ManyToOne
+    @JoinColumn(name = "cart_id")
+    private Cart cart;
+
+    @Column(name = "product_id")
+    private String productId;
+
+    @Column(name = "product_name")
+    private String productName;
+
+    @Column(name = "price")
+    private double price;
+
+    @Column(name = "quantity")
+    private int quantity;
+
+    @Override
+    public String toString() {
+        return productId + ":" + productName + "\t" + quantity;
+    }
+}
